# kal

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.ja.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
examples/: arith.kal  arrays.kal  assoc.kal  bool.kal  box.kal  cast.kal  discard.kal  drop.kal  enum.kal  extern.kal  fib.kal  generic.kal  generic_fn.kal  generic_struct.kal  hashmap.kal  loop.kal  methods.kal  move.kal  mut.kal  operators.kal  option.kal  owned_string.kal  question.kal  ref.kal  slices.kal  string.kal  string_cmp.kal  string_coerce.kal  string_concat.kal  struct.kal  trait.kal  vec.kal  vec_pop.kal
include/kal/: AST.h  CodeGen.h  Diagnostic.h  Lexer.h  MoveCheck.h  Parser.h  Sema.h  SourceManager.h  Token.h  Type.h
src/: CodeGen.cpp  Diagnostic.cpp  Lexer.cpp  MoveCheck.cpp  Parser.cpp  Sema.cpp  SourceManager.cpp  Type.cpp  kal.cpp  main.cpp
tests/: README.md  run_tests.sh
tests/diagnostics/: array_element_mismatch.kal  array_element_mismatch.stderr  assign_to_immutable.kal  assign_to_immutable.stderr  assoc_arg_mismatch.kal  assoc_arg_mismatch.stderr  assoc_unknown.kal  assoc_unknown.stderr  bool_arith.kal  bool_arith.stderr  box_double_move.kal  box_double_move.stderr  box_wrong_args.kal  box_wrong_args.stderr  cannot_infer_type_args.kal  cannot_infer_type_args.stderr  clear_immutable.kal  clear_immutable.stderr  concat_str_number.kal  concat_str_number.stderr  deref_non_ref.kal  deref_non_ref.stderr  duplicate_field.kal  duplicate_field.stderr  duplicate_type_param.kal  duplicate_type_param.stderr  field_on_non_struct.kal  (+137 more)
(+30 files in other folders)
